Opened 13 years ago

Closed 13 years ago

Last modified 13 years ago

#8022 closed bug (fixed)

KDL when attaching USB drive

Reported by: humdinger Owned by: mmlr
Priority: normal Milestone: R1
Component: Drivers/USB Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is around hrev42700...

I just got a new external USB3 drive a 2TB WD MyBook. It's attached to an USB2 port as I sadly don't have USB3 in this old notebook. At the start is a small 20GB FAT32 partition that I planned to format to BFS as a little Haiku backup corner. The rest is one massive NTFS partition.

Connecting it in Haiku results immediately in the attached KDL.

Attachments (2)

KDL-USB-drive-1.JPG (215.7 KB ) - added by humdinger 13 years ago.
KDL, part 1
KDL-USB-drive-2.JPG (251.5 KB ) - added by humdinger 13 years ago.
KDL, part 2

Download all attachments as: .zip

Change History (5)

by humdinger, 13 years ago

Attachment: KDL-USB-drive-1.JPG added

KDL, part 1

by humdinger, 13 years ago

Attachment: KDL-USB-drive-2.JPG added

KDL, part 2

comment:1 by mmlr, 13 years ago

Resolution: fixed
Status: newclosed

Should be fixed in hrev42840. It might just uncover the next problem though...

comment:2 by humdinger, 13 years ago

Nice. It now mounts! Thanks!

Here's the syslog after mounting, if that shows anthing interesting:

KERN: usb hub 22: port 0: new device connected
KERN: usb_disk: device reports a lun count of 2
KERN: usb_disk: vendor_identification    "WD      "
KERN: usb_disk: product_identification   "My Book 1140    "
KERN: usb_disk: product_revision_level   "1003"
KERN: usb_disk: vendor_identification    "WD      "
KERN: usb_disk: product_identification   "SES Device      "
KERN: usb_disk: product_revision_level   "1003"
KERN: usb error ehci -1: qtd (0x027ea980) error: 0x00128d40
KERN: usb_disk: getting request sense data failed
KERN: usb error ehci -1: KERN: qtd (0x027eb300) error: 0x00128d40
KERN: usb_disk: getting request sense data failed
KERN: usb error ehci -1: qtd (0x027ebc80) error: 0x00128d40
KERN: usb_disk: getting request sense data failed
KERN: usb error ehci -1: KERN: qtd (0x027ec600) error: 0x00128d40
KERN: usb_disk: getting request sense data failed
KERN: usb error ehci -1: KERN: qtd (0x027ecf80) error: 0x00128d40
KERN: usb_disk: getting request sense data failed
KERN: usb error ehci -1: qtd (0x027ed900) error: 0x00128d40
KERN: usb_disk: getting request sense data failed
KERN: usb_disk: unhandled ioctl 24
KERN: KDiskDeviceManager::_ScanPartition(/dev/disk/usb/0/0/raw)
KERN:   trying: partitioning_systems/intel/extended/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/intel/map/v1
KERN: intel: pm_identify_partition(12, 12: 0, 2000365289472, 512)
KERN:   returned: 0.81
KERN:   trying: file_systems/bfs/v1
KERN:   returned: -1
KERN:   trying: file_systems/devfs/v1
KERN:   returned: -1
KERN:   trying: file_systems/rootfs/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/amiga_rdb/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/apple/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/efi_gpt/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/session/v1
KERN:   returned: -1
KERN:   trying: file_systems/attribute_overlay/v1
KERN:   returned: -1
KERN:   trying: file_systems/btrfs/v1
KERN: [34mbtrfs:[0m invalid super block!
KERN:   returned: -1
KERN:   trying: file_systems/cdda/v1
KERN: usb_disk: unhandled ioctl 10102
KERN:   returned: -1
KERN:   trying: file_systems/exfat/v1
KERN: [34mexfat:[0m invalid super block!
KERN:   returned: -1
KERN:   trying: file_systems/ext2/v1
KERN: [34mext2:[0m invalid super block!
KERN:   returned: -1
KERN:   trying: file_systems/fat/v1
KERN:   returned: -1
KERN: googlefs: std_ops(INIT)
KERN:   trying: file_systems/googlefs/v1
KERN:   returned: -1
KERN: googlefs: std_ops(UNINIT)
KERN:   trying: file_systems/iso9660/v1
KERN: identify(12, 0x85ae92b0)
KERN:   returned: -1
KERN:   trying: file_systems/nfs/v1
KERN:   returned: -1
KERN:   trying: file_systems/ntfs/v1
KERN: fs_identify_partition: boot signature NTFS doesn't match
KERN:   returned: -1
KERN:   trying: file_systems/reiserfs/v1
KERN:   returned: -1
KERN:   trying: file_systems/udf/v1
KERN: udf_recognize: Invalid sequence. status = -1
KERN:   returned: -1
KERN:   trying: file_systems/write_overlay/v1
KERN:   returned: -1
KERN:   scanning with: partitioning_systems/intel/map/v1
KERN: intel: pm_scan_partition(12, 12: 0, 2000365289472, 512)
KERN: KDiskDeviceManager::_ScanPartition(/dev/disk/usb/0/0/0)
KERN:   trying: partitioning_systems/intel/extended/v1
KERN: intel: ep_identify_partition(12, 1048576, 20973415424, 512)
KERN:   returned: -1
KERN:   trying: partitioning_systems/intel/map/v1
KERN: intel: pm_identify_partition(12, 13: 1048576, 20973415424, 512)
KERN:   returned: -1
KERN:   trying: file_systems/bfs/v1
KERN:   returned: -1
KERN:   trying: file_systems/devfs/v1
KERN:   returned: -1
KERN:   trying: file_systems/rootfs/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/amiga_rdb/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/apple/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/efi_gpt/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/session/v1
KERN:   returned: -1
KERN:   trying: file_systems/attribute_overlay/v1
KERN:   returned: -1
KERN:   trying: file_systems/btrfs/v1
KERN: [34mbtrfs:[0m invalid super block!
KERN:   returned: -1
KERN:   trying: file_systems/cdda/v1
KERN: usb_disk: unhandled ioctl 10102
KERN:   returned: -1
KERN:   trying: file_systems/exfat/v1
KERN: [34mexfat:[0m invalid super block!
KERN:   returned: -1
KERN:   trying: file_systems/ext2/v1
KERN: [34mext2:[0m invalid super block!
KERN:   returned: -1
KERN:   trying: file_systems/fat/v1
KERN:   returned: 0.8
KERN: googlefs: std_ops(INIT)
KERN:   trying: file_systems/googlefs/v1
KERN:   returned: -1
KERN: googlefs: std_ops(UNINIT)
KERN:   trying: file_systems/iso9660/v1
KERN: identify(12, 0x85ae9360)
KERN:   returned: -1
KERN:   trying: file_systems/nfs/v1
KERN:   returned: -1
KERN:   trying: file_systems/ntfs/v1
KERN: fs_identify_partition: boot signature NTFS doesn't match
KERN:   returned: -1
KERN:   trying: file_systems/reiserfs/v1
KERN:   returned: -1
KERN:   trying: file_systems/udf/v1
KERN: udf_recognize: Invalid sequence. status = -1
KERN:   returned: -1
KERN:   trying: file_systems/write_overlay/v1
KERN:   returned: -1
KERN:   scanning with: file_systems/fat/v1
KERN: KDiskDeviceManager::_ScanPartition(/dev/disk/usb/0/0/1)
KERN:   trying: partitioning_systems/intel/extended/v1
KERN: intel: ep_identify_partition(12, 20974665728, 1979390623744, 512)
KERN:   returned: -1
KERN:   trying: partitioning_systems/intel/map/v1
KERN: intel: pm_identify_partition(12, 14: 20974665728, 1979390623744, 512)
KERN:   returned: -1
KERN:   trying: file_systems/bfs/v1
KERN:   returned: -1
KERN:   trying: file_systems/devfs/v1
KERN:   returned: -1
KERN:   trying: file_systems/rootfs/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/amiga_rdb/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/apple/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/efi_gpt/v1
KERN:   returned: -1
KERN:   trying: partitioning_systems/session/v1
KERN:   returned: -1
KERN:   trying: file_systems/attribute_overlay/v1
KERN:   returned: -1
KERN:   trying: file_systems/btrfs/v1
KERN: [34mbtrfs:[0m invalid super block!
KERN:   returned: -1
KERN:   trying: file_systems/cdda/v1
KERN: usb_disk: unhandled ioctl 10102
KERN:   returned: -1
KERN:   trying: file_systems/exfat/v1
KERN: [34mexfat:[0m invalid super block!
KERN:   returned: -1
KERN:   trying: file_systems/ext2/v1
KERN: [34mext2:[0m invalid super block!
KERN:   returned: -1
KERN:   trying: file_systems/fat/v1
KERN:   returned: -1
KERN: googlefs: std_ops(INIT)
KERN:   trying: file_systems/googlefs/v1
KERN:   returned: -1
KERN: googlefs: std_ops(UNINIT)
KERN:   trying: file_systems/iso9660/v1
KERN: identify(12, 0x85ae9220)
KERN:   returned: -1
KERN:   trying: file_systems/nfs/v1
KERN:   returned: -1
KERN:   trying: file_systems/ntfs/v1
KERN:   returned: 0.8
KERN:   trying: file_systems/reiserfs/v1
KERN:   returned: -1
KERN:   trying: file_systems/udf/v1
KERN: read_pos(pos:10739028860928, len:512) failed with: 0xffffffff
KERN: udf_recognize: Invalid sequence. status = -1
KERN:   returned: -1
KERN:   trying: file_systems/write_overlay/v1
KERN:   returned: -1
KERN:   scanning with: file_systems/ntfs/v1
KERN: usb error ehci -1: KERN: qtd (0x0280c000) error: 0x80088d40
KERN: usb_disk: operation 0x25 failed at the SCSI level
KERN: usb error ehci -1: qtd (0x0280c680) error: 0x80128d40
KERN: usb_disk: getting request sense data failed
KERN: usb_disk: operation 0x25 failed at the SCSI level
KERN: usb error ehci -1: qtd (0x0280d000) error: 0x00128d40
KERN: usb_disk: getting request sense data failed
KERN: usb_disk: operation 0x25 failed at the SCSI level
KERN: usb error ehci -1: qtd (0x0280d980) error: 0x00128d40
KERN: usb_disk: getting request sense data failed
KERN: usb_disk: failed to update capacity

comment:3 by humdinger, 13 years ago

I found that copying a file to the drive takes incredibly long. A 2kb HTML file takes about 10s and the LED keeps blinking for another 30s. The syslog, however, remains empty. Also navigating the folders takes ages, freezing Tracker while doing that. Unmounting too. Unmounting also leaves a generic file cabinet icon after removing the USB-Stick icon, telling me the resource is busy when trying to unmount that as well. Here's the syslog after unmounting:

KERN: fs_create_attrib - ntfs_non_resident_attr_record_add: No space left on device
KERN: fs_create_attrib - ntfs_attr_open: File or Directory already exists
KERN: fs_create_attrib - ntfs_non_resident_attr_record_add: No space left on device

The speed issue might also be a NTFS issue, since mounting and transferring files to the FAT partition on that drive is fast. This might also be a matter of size however, 20 gb vs. 1800 gb...

Unfortunately, I don't think I'll be able to bring the drive to BeGeistert. While it's reasonably small, it still may be to bulky to fit into my backpack. We'll see...

Note: See TracTickets for help on using tickets.