Don't try to do another request sense if the failing operation already was a request sense. Otherwise we can easily run into an infinite recursion. Should fix #8022.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42840 a95241bf-73f2-0310-859d-f6bbb57e9c96